# TabClear

./: .env.example  .gitignore  ORANGE BELT README.md  README.md  WHITE BELT README.md  YELLOW BELT README.md  index.html  orange-belt-plan.md  package-lock.json  package.json  yellow-belt-plan.md
.github/workflows/: ci.yml
contracts/: .gitignore  Cargo.toml
contracts/tabclear-requests/: Cargo.toml  README.md  fetched.wasm
contracts/tabclear-requests/src/: lib.rs  test.rs
contracts/tabclear-requests/test_snapshots/test/: cancel_flow.1.json  create_and_read.1.json  initialize_only_once.1.json  list_requests_pages_newest_first.1.json  mark_paid_flow.1.json  settle_records_payer.1.json  settle_rejects_double_pay_and_cancelled.1.json  settle_requires_wiring.1.json
contracts/tabclear-settlement/: Cargo.toml
contracts/tabclear-settlement/src/: lib.rs  test.rs
scripts/: deploy.sh
src/: App.tsx  styles.css  types.ts
src/components/: CashoutModal.tsx  Dashboard.tsx  Landing.tsx  RequestsPanel.tsx  SendModal.tsx  Toast.tsx  icons.tsx
src/hooks/: useFreighter.ts  useWallet.ts
src/lib/: contract.ts  format.test.ts  format.ts  settlement.ts  stellar.ts
