[package]
name = "tabclear-settlement"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
tabclear-requests = { path = "../tabclear-requests" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
